[package]
name = "rusty-prun-little-helper"
description = "Rusty PrUn Little Helper"
version = "0.1.0"
authors = ["Tony Johnson <tony@tosp.net.au>"]
edition = "2018"

#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.18"
wasm-bindgen = "0.2.67"
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'MouseEvent',
  'DomRect',
  'Element',
  'HtmlSelectElement',
  'TextMetrics',
]
